Fixed few stuff: section, figures and bib. WIP exercises

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -17,7 +17,7 @@
     number  = {9},
     pages   = {1098--1101},
     year    = {1952},
-    doi = {10.1007/bf02837279},
+    doi     = {10.1007/bf02837279},
 }
 
 @article{elias1975,
@@ -28,7 +28,7 @@
     number  = {2},
     pages   = {194--203},
     year    = {1975},
-    doi = {10.1109/tit.1975.1055349},
+    doi     = {10.1109/tit.1975.1055349},
 }
 
 @article{manzini2001,
@@ -65,4 +65,75 @@
   pages        = {143--156},
   year         = {2005},
   doi          = {10.1016/J.JDA.2004.08.002},
+}
+
+@article{lempel1976,
+  author       = {Jacob Ziv and
+                  Abraham Lempel},
+  title        = {On the Complexity of Finite Sequences}, 
+  journal      = {IEEE Transactions on Information Theory}, 
+  volume       = {22},
+  number       = {1},
+  pages        = {75-81},
+  year         = {1976},
+  doi          = {10.1109/TIT.1976.1055501} 
+}
+
+
+@article{lempel1977,
+  author       = {Jacob Ziv and
+                  Abraham Lempel},
+  title        = {A universal algorithm for sequential data compression},
+  journal      = {{IEEE} Trans. Inf. Theory},
+  volume       = {23},
+  number       = {3},
+  pages        = {337--343},
+  year         = {1977},
+  doi          = {10.1109/TIT.1977.1055714},
+}
+
+@article{lempel1978,
+  author       = {Jacob Ziv and
+                  Abraham Lempel},
+  title        = {Compression of individual sequences via variable-rate coding},
+  journal      = {{IEEE} Trans. Inf. Theory},
+  volume       = {24},
+  number       = {5},
+  pages        = {530--536},
+  year         = {1978},
+  doi          = {10.1109/TIT.1978.1055934},
+}
+
+@article{storer1982,
+  author       = {James A. Storer and
+                  Thomas G. Szymanski},
+  title        = {Data compression via textual substitution},
+  journal      = {J. {ACM}},
+  volume       = {29},
+  number       = {4},
+  pages        = {928--951},
+  year         = {1982},
+  doi          = {10.1145/322344.322346}
+}
+
+@article{kosolobov2019,
+  author       = {Dmitry Kosolobov and
+                  Arseny M. Shur},
+  title        = {Comparison of LZ77-type parsings},
+  journal      = {Inf. Process. Lett.},
+  volume       = {141},
+  pages        = {25--29},
+  year         = {2019},
+  doi          = {10.1016/J.IPL.2018.09.005},
+}
+
+@article{welch1984,
+  author       = {Terry A. Welch},
+  title        = {A Technique for High-Performance Data Compression},
+  journal      = {Computer},
+  volume       = {17},
+  number       = {6},
+  pages        = {8--19},
+  year         = {1984},
+  doi          = {10.1109/MC.1984.1659158},
 }
