--- a/Information Theory/extra/TikZ/Tab 1 - Example of Sardinas-Patterson.tex
+++ b/Information Theory/extra/TikZ/Tab 1 - Example of Sardinas-Patterson.tex
@@ -3,19 +3,20 @@
     \begin{table}[!hb]
         \centering
         \begin{tabular}{|c|c|c|c|c|c|}
-        \hline 
-        \(S_{0}\) & \(S_{1}\) & \(S_{2}\) & \(S_{3}\) & \(S_{4}\) & \(S_{5}\) \\ 
-        \hline
-        a & d & eb & & & \\ 
-        c & & & & & \\ 
-        ad &  & & & & \\ 
-        abb & bb & cde & de & b & ab \\ 
-        bad & & & & & \\ 
-        deb & & & & & \\ 
-        bbcde & & & & & \\ 
-        \hline
+            \hline 
+            \(S_{0}\) & \(S_{1}\)               & \(S_{2}\)               & \(S_{3}\)               & \(S_{4}\)             & \(S_{5}\)                 \\ 
+            \hline
+            a       &                           &                         &                         &                       &                           \\
+            c       &                           &                         & \textcolor{rpRose}{de}  &                       &                           \\ 
+            ad      & \textcolor{rpLove}{d}     &                         &                         &                       &                           \\ 
+            abb     & \textcolor{rpLove}{bb}    &                         &                         &                       &                           \\ 
+            bad     &                           &                         &                         &                       & \textcolor{rpFoam}{ab}    \\ 
+            deb     &                           & \textcolor{rpGold}{eb}  &                         & \textcolor{rpPine}{b} &                           \\ 
+            bbcde   &                           & \textcolor{rpGold}{cde} &                         &                       & \textcolor{rpFoam}{bcde}  \\
+            \hline
         \end{tabular}
-        \caption{Steps of Sardinas-Patterson for the code \(C\).}
+        \caption{Steps of Sardinas-Patterson for the code \(C\). 
+        Note that each \(\omega\) has been added to the row of the value use for \(\alpha\).}
         \label{Tab:1}
     \end{table}    
 \end{document}
