--- a/Information Theory/sections/simple/1 - Basics of IT.tex
+++ b/Information Theory/sections/simple/1 - Basics of IT.tex
@@ -1,16 +1,16 @@
 \documentclass{subfiles}
 \begin{document}
-    Information theory, alongside data compression,
-        has a key role in modern computer science. 
-        The former defines a set of theoretical tools useful, 
-        among other things, to understand the limitations of what is computable;
-        the latter allows to reduce the amount of space required (in terms of bits)
-        without losing information.
+    Information theory, alongside data compression, 
+        plays a key role in modern computer science. 
+        The former provides theoretical tools useful, 
+        among other things, for understanding the limits of computability; 
+        the latter enables the reduction of space requirements 
+        (in terms of bits) without loss of information.
 
     \subsection{Shannon's Entropy}\label{Sec:1.1}
     \subfile{../sub/1.1 - Shannon entropy}
 
-    \subsection[Encoding of a source]{Source encoding and Sardinas-Patterson algorithm}
+    \subsection{Encoding of a source}
     \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm}
 
     \subsection{Average code length and Kraft inequality}
