--- a/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
+++ b/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
@@ -14,13 +14,13 @@
                 Meaning that if \(H(S) = \entropy{p_{1}, \ldots, p_{n}}\), 
                 then \(H\) is continuous in [0, 1].
 
-            \item \(\entropy{\tfrac{1}{2}, \tfrac{1}{2}}[2] = 1\).
+            \item \(\entropy{\sfrac{1}{2}, \sfrac{1}{2}}[2] = 1\).
 
             \item If \(\tau\) is a permutation of the probabilities, 
                 then \(\entropy{\tau} = \entropy{p_{1}, \ldots, p_{n}}[n]\). 
                 Meaning that, \(H\) must not care of the order of the probabilities.
 
-            \item If \(A(n) = \entropy{\tfrac{1}{n}, \ldots, \tfrac{1}{n}}[n]\),
+            \item If \(A(n) = \entropy{\sfrac{1}{n}, \ldots, \sfrac{1}{n}}[n]\),
                 then \(H\) is monotonically increasing.
                 Equally probable events imply greater uncertainty.
 
@@ -84,10 +84,10 @@
                     \abs[\frac{A(n)}{A(2)} - \frac{k}{r}] < \frac{1}{r}
                         \implies A(n) \approx \frac{A(2)}{\log_{b} 2} \log_{b} n
                 \]
-                since \(\nicefrac{A(n)}{A(2)} \approx \log_{b} n\).
+                since \(\sfrac{A(n)}{A(2)} \approx \log_{b} n\).
                 Thus, \(A(n) = c \log_{b} n\).
 
-            \item Suppose \(p \in \Q \iff p = \tfrac{r}{s}, r \le s\).
+            \item Suppose \(p \in \Q \iff p = \sfrac{r}{s}, r \le s\).
                 Then we have 
                 \[\begin{aligned}
                     A(s) & = \entropy{\frac{1}{s}, \ldots, \frac{1}{s}}[s] \\ 
