--- a/Information Theory/sections/subsub/1.2.1 - UD codes.tex
+++ b/Information Theory/sections/subsub/1.2.1 - UD codes.tex
@@ -1,25 +1,26 @@
 \documentclass{subfiles}
 \begin{document}
-    One may think that non-singular codes are enough, 
-        but in most cases they are not.
-        In fact, it might happen that a codeword is prefix of another,
-        making the decode process tedious.
+    One might think that non-singular codes are sufficient, 
+        but in most they don't.
+        In fact, it can happen that a codeword is a prefix of another,
+        making decoding ambiguous or tedious.
     \begin{example*}
-        Let's consider the following codes.
-        \subfile{../../extra/TikZ/Figure * - Example of non singular codes}
-        How should we decode the string 000111? 
-        Once again, we have many possibilities:
+        Consider the following code: \(C = \set{0, 1, 01, 11}\). 
+            Assume the alphabet of the previous example.
+            How should we decode the string 000111? 
+            Again, multiple decodings are possible:
             for example \(s_{1}s_{1}s_{3}s_{2}s_{2}\) or \(s_{1}s_{1}s_{3}s_{4}\).
-        Additionally, unless contex is given, we don't know which one is correct.
+            The correct decoding cannot be determined unless context is given.
     \end{example*}
-    We say that a code is \gls{ud} if and only each sequence of codewords
+
+    We say that a code is UD if and only if each sequence of codewords
         corresponds to at most one sequence of source symbols.
         From this definition, two questions follow:
         \begin{itemize}
-            \item How we construct such codes?
-            \item How can we check whether a given code is \gls{ud} or not?
+            \item How do we construct such codes?
+            \item How can we check whether a given code is UD?
         \end{itemize}
 
-    The next section focus on the second question, 
-        \emph{Section \ref{Sec:2}-\ref{Sec:4}} will be focused on the construction of \gls{ud} codes.
+    The next section focuses on the second question, 
+        while \emph{Sections \ref{Sec:2}-\ref{Sec:4}} focus on the construction of UD codes.
 \end{document}
