--- a/Information Theory/extra/Bib/reports.bib
+++ b/Information Theory/extra/Bib/reports.bib
@@ -5,5 +5,6 @@
     institution  = {Digital Equipment Corporation, Systems Research Center},
     number       = {Research Report 124},
     address      = {Palo Alto, California},
-    month        = {May 10}
+    month        = {May 10},
+    doi          = {10.1109/DCC.1997.582009}
 }
