--- a/Information Theory/sections/subsub/1.2.2 - Sardina-Patterson.tex
+++ b/Information Theory/sections/subsub/1.2.2 - Sardina-Patterson.tex
@@ -1,61 +1,57 @@
 \documentclass{subfiles}
 \begin{document}
-    The \emph{Sardinas-Patterson} algorithm provides a way to check whether a code is \gls{ud} or not. 
-        Conceptually the algorithm, and the theorem it's built on,
-        is based on the following remark: 
+    The \emph{Sardinas-Patterson} algorithm provides a way to check whether a code is UD or not. 
+        Conceptually, the algorithm and its underlying theorem are based on the following remark: 
         consider a string that is the concatenation of codewords.
-        If we try to construct two distinct factorization, 
-        each word in of the factorization is either 
-        \textcolor{rpIris}{part of a word in the other factorization,
-        or it starts with a prefix that is suffix of a word in the other factorization}.
-        Hence, a code is non-UD if it happens that a suffix is itself a codeword.
+        If we try to construct two distinct factorizations, 
+        each word in one of the factorizations is either part of a word in the other factorization,
+        or it starts with a prefix that is a suffix of a word in the other factorization.
+        Hence, a code is non-UD if a suffix is itself a codeword.
 
-    As stated before the algorithm is based on a theorem, given below.
+    As stated before, the algorithm is based on a theorem, given below.
     \begin{theorem}\label{Thm:1}
         Given \(C\) a code on an alphabet \(\Sigma\), 
             consider the sets \(S_{0}, S_{1}, \ldots\) such that:
             \begin{itemize}
-                \item \(S_{0} = C\)
+                \item \(S_{0} = C\) 
                 \item \(S_{i} = \set{\omega \in \Sigma^{*}}[
                     \exists \alpha \in S_{0}, \exists \beta \in S_{i - 1} : 
                     \alpha = \beta \omega \lor \beta = \alpha \omega
                 ]\)
             \end{itemize}
-            then necessary and sufficient condition for \(C\) to be a \gls{ud} code is that,
+        Then a necessary and sufficient condition for \(C\) to be a UD code is that
             \(\forall n > 0, S_{0} \cap S_{n} = \varnothing\).
     \end{theorem}
-    Therefore, the algorithm has three halt conditions:
-    \begin{itemize}
-        \item \(\forall i > 0,  S_{0} \cap S_{i} \neq \varnothing\) the the code is not \gls{ud}.
-        \item \(\forall i > 0, S_{i} = \varnothing\) then the code is \gls{ud}.
-        \item \(\forall i, j > 0, S_{i} = S_{j}\) then the code is \gls{ud}.
-    \end{itemize}
+    \clearpage
+
     \begin{example*}
-        Let's consider the following code: \(C = \set{a, c, ad, abb, bad, deb,bbcde}\).
-        Is it \gls{ud}? Applying Sardinas-Patterson, step by step we get the following:
+        Consider the following code: \(C = \set{a, c, ad, abb, bad, deb, bbcde}\).
+        Is it UD? Applying Sardinas-Patterson step by step, we get the following:
         \begin{description}
-            \item [\textbf{Iter 1. }] Let \(\alpha_{0} = ab, \alpha_{1} = abb\) 
-                and \(\beta_{0} = \beta_{1} = a\) then, \(S_{1} = \set{d, bb}\).
-            \item [\textbf{Iter 2. }] Let \(\alpha_{0} = deb, \alpha_{1} = bbcde\)
-                and \(\beta_{0} = d, \beta_{1} = bb\) then, \(S_{2} = \set{eb, cde}\).
-            \item [\textbf{Iter 3. }] Let \(\alpha_{0} = c\) and \(\beta = cde\)
-                then, \(S_{3} = \set{de}\). 
-            \item [\textbf{Iter 4. }] Let \(\alpha_{0} = deb\) and \(\beta = de\)
-                then, \(S_{4} = \set{b}\). 
-            \item [\textbf{Iter 5. }] Let \(\alpha_{0} = bad\) and \(\beta = b\)
-                then, \(S_{5} = \set{ad}\). 
+            \item [\textbf{Iteration 1}] Let \(\beta = a\). 
+                If we let \(\omega = d\), we have \(\alpha = \beta\omega = ad \in S_{0}\);
+                hence, \(\omega = d \in S_{1}\). By the same logic we \(bb \in S_{1}\). 
+            
+            \item [\textbf{Iteration 2}] Let \(\beta = d\).
+                If we let \(\omega = eb\), we get \(\alpha = deb \in S_{0}\);
+                thus, \(eb \in S_{2}\). With a similar reasoning we get \(cde \in S_{2}\).
+
+            \item [\textbf{Iteration 3}] Let \(\alpha = c\).
+                If we let \(\omega = de\), it derives that \(\beta = cde \in S_{2}\);
+                therefore, \(de \in S_{3}\).
+
+            \item [\textbf{Iteration 4}] Let \(\beta = de\).
+                If we let \(\omega = b\), we get \(\alpha = deb \in S_{0}\);
+                hence, \(b \in S_{4}\).
+
+            \item [\textbf{Iteration 5}] Let \(\beta = b\).
+                If we let \(\omega = bcde\), we have \(\alpha = bbcde \in S_{0}\);
+                thus, \(bcde \in S_{5}\). By the same logic \(ad \in S_{5}\) 
         \end{description}
-        \subfile{../../extra/TikZ/Tab 1 - Example of Sardinas-Patterson}
+
         From the above steps (summarised in \emph{Table \ref{Tab:1}}), 
-            follows that the code is not \gls{ud} since \(S_{0} \cap S_{5} =
-            \set{ab} \ne \varnothing\).
+            it follows that the code is not UD since \(S_{0} \cap S_{5} =
+            \set{ad} \ne \varnothing\).
+        \subfile{../../extra/TikZ/Tab 1 - Example of Sardinas-Patterson}
     \end{example*}
-    \begin{exercise}
-        Apply the Sardinas-Patterson algorithm to the following codes:
-        \begin{itemize}
-            \item \(C_{0} = \set{a, b, cd, abb, abcd }\) 
-            \item \(C_{1} = \set{0, 01, 100, 11001, 01011}\)
-            \item \(C_{2} = \set{010, 0001, 0110, 11000, 00011, 00110, 11110, 101011}\)
-        \end{itemize}
-    \end{exercise}
 \end{document}
