--- a/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
+++ b/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
@@ -1,26 +1,28 @@
 \documentclass{subfiles}
 \begin{document}
-    The concept of average code length allows us to define a intresting class of 
-        codes: the \emph{compact} (or optimal) codes.
-        These are \gls{ud} codes that have the lowest \gls{acl}.
-    
-    A first attempt to achive such codes was firstly proposed by Shannon 
-        and \emph{Robert Mario Fano}, who developed the so called Shannon-Fano 
-        encoding (1949).
+    The concept of average code length allows us to define an interesting class of  codes:
+        the \emph{compact} (or optimal) codes.
+        These are UD codes that have the lowest ACL.
+
+    A first attempt to achieve such codes was proposed by Shannon and \emph{Robert Mario Fano},
+        who developed the so-called Shannon-Fano encoding.
 
     \paragraph{Shannon-Fano encoding}
-    We will be considering the binary case. 
-    The encoding itself is very simple: we order the symbols in decreasing order,
-    divide the symbols in two sets such that the sum of probabilities in each set 
-    is almost equal, encode the symbols in the first set with 0 and the other with 1.
-    Lastly, repeat the procedure for each set recursively.
+    We will consider the binary case. 
+        The encoding itself is very simple: we order the symbols in decreasing order,
+        divide the symbols into two sets such that the sum of probabilities in each set is almost equal, 
+        encode the symbols in the first set with 0 and the other with 1,
+        and finally repeat the procedure recursively for each set.
+
     \begin{example*}
-        Let's assume the alphabet \(\set{a, b, c, d, e}\) whose probabilities are
-            \(\set{\tfrac{1}{2}, \tfrac{1}{4}, \tfrac{1}{8},
-                \tfrac{1}{16}, \tfrac{1}{16}}\). 
-            Applying the steps above we get the codes shown in the table below. 
-            \subfile{../../extra/TikZ/Tab * - Example of SF encoding}
+        Consider the alphabet \(\Sigma = \set{a, b, c, d}\) and let \(p_{a} = \sfrac{1}{2},
+        p_{b} = \sfrac{1}{8}, p_{c} = \sfrac{1}{4}\) and \(p_{d} = \sfrac{1}{8}\)
+        Applying the steps above, we get the codes shown in the table below.
+        Here, each color is used to show a different iteraction.
+        \subfile{../../extra/TikZ/Tab * - Example of Shannon Fano encoding}
     \end{example*}
-    One can prove that Shannon-Fano encoding is not optimal.
-    \clearpage
+
+    One can prove that Shannon-Fano encoding is not optimal. 
+    We present it just for hystorical reasons.
+    \cleardoublepage
 \end{document}
